add planning updates